# sendcloud

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.json  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  uwsgi.ini
feed/: email.py  feed_parser.py  models.py  serializers.py  tasks.py  urls.py  views.py
feed/migrations/: 0001_initial.py  0002_feeditem_created.py  0003_auto_20211013_1431.py
feed/tests/: conftest.py  data_dump.py  test_feed_parser.py  test_task.py  test_views.py
logs/: README.md
sendcloud/: __init__.py  settings.py  settings_test.py  urls.py  wsgi.py
